--- a/index.html
+++ b/index.html
@@ -18,190 +18,202 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a class="logo" href="./index.html"
-          >Web<span class="logo">Studio</span></a
-        >
-        <ul>
-          <li><a class="nav-link" href="./index.html">Studio</a></li>
-          <li><a class="nav-link" href="">Portfolio</a></li>
-          <li><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address-wrap">
-        <ul>
-          <li>
-            <a class="address-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav>
+          <a class="logo" href="./index.html"
+            >Web<span class="logo">Studio</span></a
+          >
+          <ul class="main-menu">
+            <li><a class="nav-link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link" href="">Portfolio</a></li>
+            <li><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address-wrap">
+          <ul class="contact-menu">
+            <li>
+              <a class="address-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="address-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="solutions-wrap">
-        <h1 class="first-header-class">
-          Effective Solutions for Your Business
-        </h1>
-        <button type="button" class="button">Order Service</button>
+        <div class="container">
+          <h1 class="first-header-class">
+            Effective Solutions for Your Business
+          </h1>
+          <button type="button" class="button">Order Service</button>
+        </div>
       </section>
       <section class="features">
-        <h2 class="second-header-class">Features</h2>
-        <ul>
-          <li>
-            <h3 class="third-header-class">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="third-header-class">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="third-header-class">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="third-header-class">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="second-header-class">Features</h2>
+          <ul>
+            <li>
+              <h3 class="third-header-class">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="third-header-class">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="third-header-class">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="third-header-class">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="our-team-wrap">
-        <h2 class="second-header-class">Our Team</h2>
-        <ul>
-          <li class="our-team-card">
-            <img
-              src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="third-header-class">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li class="our-team-card">
-            <img
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="third-header-class">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li class="our-team-card">
-            <img
-              src="./images/camila-garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="third-header-class">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="our-team-card">
-            <img
-              src="./images/daniel-wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="third-header-class">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="second-header-class">Our Team</h2>
+          <ul>
+            <li class="our-team-card">
+              <img
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="third-header-class">Mark Guerrero</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li class="our-team-card">
+              <img
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="third-header-class">Tom Ford</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li class="our-team-card">
+              <img
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="third-header-class">Camila Garcia</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="our-team-card">
+              <img
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="third-header-class">Daniel Wilson</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="our-portfolio-wrap">
-        <h2 class="second-header-class">Our Portfolio</h2>
-        <ul>
-          <li class="our-portfolio-card">
-            <img
-              src="./images/banking-app.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="third-header-class">Banking App</h3>
-            <p class="text">App</p>
-          </li>
-          <li class="our-portfolio-card">
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="third-header-class">Cashless Payment</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="our-portfolio-card">
-            <img
-              src="./images/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="third-header-class">Meditation App</h3>
-            <p class="text">App</p>
-          </li>
-          <li class="our-portfolio-card">
-            <img
-              src="./images/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="third-header-class">Taxi Service</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="our-portfolio-card">
-            <img
-              src="./images/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="third-header-class">Screen Illustrations</h3>
-            <p class="text">Design</p>
-          </li>
-          <li class="our-portfolio-card">
-            <img
-              src="./images/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="third-header-class">Online Courses</h3>
-            <p class="text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="second-header-class">Our Portfolio</h2>
+          <ul>
+            <li class="our-portfolio-card">
+              <img
+                src="./images/banking-app.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="third-header-class">Banking App</h3>
+              <p class="text">App</p>
+            </li>
+            <li class="our-portfolio-card">
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="third-header-class">Cashless Payment</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="our-portfolio-card">
+              <img
+                src="./images/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="third-header-class">Meditation App</h3>
+              <p class="text">App</p>
+            </li>
+            <li class="our-portfolio-card">
+              <img
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="third-header-class">Taxi Service</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="our-portfolio-card">
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="third-header-class">Screen Illustrations</h3>
+              <p class="text">Design</p>
+            </li>
+            <li class="our-portfolio-card">
+              <img
+                src="./images/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="third-header-class">Online Courses</h3>
+              <p class="text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer-wrap">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <p class="text-footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <p class="text-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
