--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section class="features">
         <div class="container">
           <h2 class="second-header-class">Features</h2>
-          <ul>
+          <ul class="features-list">
             <li>
               <h3 class="third-header-class">Strategy</h3>
               <p class="text">
@@ -92,7 +92,7 @@
       <section class="our-team-wrap">
         <div class="container">
           <h2 class="second-header-class">Our Team</h2>
-          <ul>
+          <ul class="our-team-list">
             <li class="our-team-card">
               <img
                 src="./images/mark-guerrero.jpg"
@@ -139,7 +139,7 @@
       <section class="our-portfolio-wrap">
         <div class="container">
           <h2 class="second-header-class">Our Portfolio</h2>
-          <ul>
+          <ul class="our-portfolio-list">
             <li class="our-portfolio-card">
               <img
                 src="./images/banking-app.jpg"
